--- a/src/assets/scss/partials/_watchlist-main.scss
+++ b/src/assets/scss/partials/_watchlist-main.scss
@@ -1,16 +1,20 @@
 @use './variables' as *;
 
+
 .row {
     flex-wrap: wrap;
-}
 
-.col {
-    width: calc(100%/12*4);
-    flex-direction: column;
-    gap: 1rem;
-    text-align: center;
 
-    & span {
-        color: var(--cine--dark)
+    .col {
+        width: calc(100%/12*4);
+        flex-direction: column;
+        gap: 0.8rem;
+        text-align: center;
+        padding: 0 1rem;
+        margin-bottom: 1rem;
+
+        & span {
+            color: $cine-dark;
+        }
     }
 }
